Archive2/10/ad716bed14e730/output
main.cpp: In function 'int main()':
main.cpp:24:6: error: no matching function for call to 'std::unique_ptr<A>::unique_ptr(int, main()::<lambda()>)'
     });
      ^
In file included from /usr/local/include/c++/5.1.0/memory:81:0,
                 from main.cpp:2:
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:228:2: note: candidate: template<class _Up, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::auto_ptr<_Up>&&)
  unique_ptr(auto_ptr<_Up>&& __u) noexcept;
  ^
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:228:2: note:   template argument deduction/substitution failed:
main.cpp:24:6: note:   mismatched types 'std::auto_ptr<_Up>' and 'int'
     });
      ^
In file included from /usr/local/include/c++/5.1.0/memory:81:0,
                 from main.cpp:2:
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:220:2: note: candidate: template<class _Up, class _Ep, class> std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Up, _Ep>&&)
  unique_ptr(unique_ptr<_Up, _Ep>&& __u) noexcept
  ^
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:220:2: note:   template argument deduction/substitution failed:
main.cpp:24:6: note:   mismatched types 'std::unique_ptr<_Tp, _Dp>' and 'int'
     });
      ^
In file included from /usr/local/include/c++/5.1.0/memory:81:0,
                 from main.cpp:2:
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:205:7: note: candidate: std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>&&) [with _Tp = A; _Dp = std::default_delete<A>]
       unique_ptr(unique_ptr&& __u) noexcept
       ^
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:205:7: note:   candidate expects 1 argument, 2 provided
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:200:17: note: candidate: constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr(std::nullptr_t) [with _Tp = A; _Dp = std::default_delete<A>; std::nullptr_t = std::nullptr_t]
       constexpr unique_ptr(nullptr_t) noexcept : unique_ptr() { }
                 ^
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:200:17: note:   candidate expects 1 argument, 2 provided
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:193:7: note: candidate: std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>::pointer, typename std::remove_reference<_To>::type&&) [with _Tp = A; _Dp = std::default_delete<A>; std::unique_ptr<_Tp, _Dp>::pointer = A*; typename std::remove_reference<_To>::type = std::default_delete<A>]
       unique_ptr(pointer __p,
       ^
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:193:7: note:   no known conversion for argument 2 from 'main()::<lambda()>' to 'std::remove_reference<std::default_delete<A> >::type&& {aka std::default_delete<A>&&}'
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:181:7: note: candidate: std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>::pointer, typename std::conditional<std::is_reference<_Dp>::value, _Dp, const _Dp&>::type) [with _Tp = A; _Dp = std::default_delete<A>; std::unique_ptr<_Tp, _Dp>::pointer = A*; typename std::conditional<std::is_reference<_Dp>::value, _Dp, const _Dp&>::type = const std::default_delete<A>&]
       unique_ptr(pointer __p,
       ^
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:181:7: note:   no known conversion for argument 2 from 'main()::<lambda()>' to 'std::conditional<false, std::default_delete<A>, const std::default_delete<A>&>::type {aka const std::default_delete<A>&}'
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:169:7: note: candidate: std::unique_ptr<_Tp, _Dp>::unique_ptr(std::unique_ptr<_Tp, _Dp>::pointer) [with _Tp = A; _Dp = std::default_delete<A>; std::unique_ptr<_Tp, _Dp>::pointer = A*]
       unique_ptr(pointer __p) noexcept
       ^
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:169:7: note:   candidate expects 1 argument, 2 provided
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:157:17: note: candidate: constexpr std::unique_ptr<_Tp, _Dp>::unique_ptr() [with _Tp = A; _Dp = std::default_delete<A>]
       constexpr unique_ptr() noexcept
                 ^
/usr/local/include/c++/5.1.0/bits/unique_ptr.h:157:17: note:   candidate expects 0 arguments, 2 provided
